--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "form-data": "^4.0.3",
     "node-fetch": "^2.7.0",
     "openai": "^5.1.1",
     "twilio": "^5.7.0"
