--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -12,8 +15,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "form-data": "^4.0.3",
-    "node-fetch": "^2.7.0",
+    "form-data": "^4.0.0",
+    "node-fetch": "^2.6.7",
     "openai": "^5.1.1",
     "twilio": "^5.7.0"
   }
