--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
     "node-fetch": "^2.6.7",
     "openai": "^5.1.1",
