--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "description": "",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "node-fetch": "^2.6.7",
     "openai": "^5.1.1",
+    "path": "^0.12.7",
     "twilio": "^5.7.0"
   }
 }
